# gosu

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  .yardopts  Android.mk  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Gemfile  Gosu.podspec  Gosu.tmproj  HACKING  README.md  README.txt  Rakefile  appveyor.yml
.travis/: before_install_osx.sh  before_script_linux.sh  install_osx.sh
Gosu/: Async.hpp  Audio.hpp  AutoLink.hpp  Bitmap.hpp  Buttons.hpp  ButtonsMac.hpp  ButtonsWin.hpp  ButtonsX.hpp  Color.h  Color.hpp  Constants.h  Directories.hpp  Font.h  Font.hpp  Fwd.hpp  Gosu.h  Gosu.hpp  Graphics.hpp  GraphicsBase.hpp  IO.hpp  Image.h  Image.hpp  ImageData.hpp  Input.hpp  Inspection.hpp  Math.hpp  Platform.hpp  Sample.h  Sockets.hpp  Song.h  TR1.hpp  Text.hpp  TextInput.h  TextInput.hpp  Timing.hpp  Utility.hpp  Version.hpp  WinUtility.hpp  Window.h  Window.hpp  (+1 more)
GosuImpl/: Async.cpp  DirectoriesMac.mm  DirectoriesUnix.cpp  DirectoriesWin.cpp  FileUnix.cpp  Input.cpp  InputAndroid.cpp  InputMac.mm  InputTouch.mm  InputWin.cpp  InputX.cpp  InputiOS.mm  Inspection.cpp  MacUtility.hpp  Orientation.mm  RubyGosu.swg  RubyGosuStub.mm  RubyGosu_DllMain.cxx  RubyGosu_SWIG_RENAME_PATCH.patch  RubyGosu_SWIG_TYPE_PATCH.patch  RubyGosu_wrap.cxx  RubyGosu_wrap.cxx.rej  RubyGosu_wrap.h  TextInput.cpp  TextInputMac.mm  TextInputWin.cpp  TextInputX.cpp  TimingUnix.cpp  TimingWin.cpp  Utility.cpp  UtilityApple.mm  UtilityTouch.mm  UtilityWin.cpp  WinMain.cpp  WinUtility.cpp  Window.cpp  WindowAndroid.cpp  WindowMac.mm  WindowTouch.mm  WindowWin.cpp  (+1 more)
cmake/: CMakeLists.txt  CMakeLists.txt.in  Compilation.cmake  GosuConfig.cmake  GosuConfig.cmake.in  GosuImpl.cmake  Installation.cmake  Packaging.cmake  README.md  build.sh  build_examples.sh  create_deb_package.sh  create_tgz_package.sh  gosu.pc.in  src.cmake
dependencies/: SDL_sound.license  libsndfile.license  mpg123.license  ogg_vorbis.license  stb_image.c
examples/: CMakeLists.txt  ChipmunkIntegration.rb  CptnRuby.rb  GosuZen.rb  OpenGLIntegration.rb  RMagickIntegration.rb  TextInput.cpp  Tutorial.cpp  Tutorial.rb
examples/NetworkPong/: CMakeLists.txt  NetworkPong.cpp  main.cpp
examples/TextInput/: CMakeLists.txt  TextInput.cpp
examples/Tutorial/: CMakeLists.txt  Podfile  Tutorial.cpp  main.cpp
examples/Tutorial/Tutorial/: Tutorial-Info.plist
examples/Tutorial/Tutorial.xcodeproj/: project.pbxproj
examples/Tutorial/Tutorial.xcodeproj/project.xcworkspace/xcshareddata/: Tutorial.xccheckout
examples/Tutorial/Tutorial.xcodeproj/xcshareddata/xcschemes/: Tutorial.xcscheme
feature_tests/: AsyncTest.rb  BtnUpDownBalanceTest.rb  ClippingTest.rb  FullscreenTest.rb  GLDepthTest.rb  HSVTest.rb  IdToCharTest.rb  MousePosTest.rb  MouseWheelTest.rb  QuadOrder.rb  RTLTest.rb  SamplePlayTest.rb  ScreenDimensions.rb  TextureAllocTest.rb  ThaiTest.rb  UnicodeTest.rb  VsyncTest.rb  WebFontTest.rb  WindowedTest.rb  audio_formats.rb  button_ids.rb  exotic_image.rb  gl_garbage_collection.rb  id_to_char_test.rb  image_insert.rb  image_subimage.rb  needs_cursor.rb  nonpremultiplied_alpha.rb  openal_release_resources.rb  record_draw_as_quad.rb  record_macro.rb  record_performance.rb  record_textures.rb  record_transforms.rb  sample_instance.rb  schedule_gl.rb  song_volume_and_looping.rb  text_formatting.rb  text_height.rb  text_input_shift_chars.rb  (+4 more)
ffi/: .clang-format  .clang-tidy  CMakeLists.txt  Gosu.cpp  Gosu.h  Gosu_Channel.cpp  Gosu_Channel.h  Gosu_Color.cpp  Gosu_Color.h  Gosu_Constants.cpp  Gosu_FFI.h  Gosu_FFI_internal.h  Gosu_Font.cpp  Gosu_Font.h  Gosu_Image.cpp  Gosu_Image.h  Gosu_Sample.cpp  Gosu_Sample.h  Gosu_Song.cpp  Gosu_Song.h  Gosu_TextInput.cpp  Gosu_TextInput.h  Gosu_Video.cpp  Gosu_Video.h  Gosu_Window.cpp  Gosu_Window.h
lib/: OpenAL32.lib  gosu.rb
linux/: Makefile.in  configure  configure.ac  extconf.rb
mac/: CollectExports.rb  Gosu.icns  Gosu.tmproj  RubyGosu App-Info.plist
rake/: docs.rb  format.rb  linux.rb  mac.rb  omnifocus_to_wiki.rb  push_to_github.rb  rake_compiler.rb  ruby19.rb  ruby_for_app.rb  set_version.rb  tmbundle.rb  todo.rb  unix.rb  update_dependencies.rb  upload  web.rb  website.rb  win.rb
rdoc/: gosu.rb
reference/: Deployment_on_OS_X.rdoc  Drawing_with_Colors.md  Drawing_with_Colors.rdoc  Order_of_Corners.md  Order_of_Corners.rdoc  Tileability.md  Tileability.rdoc  Z-Ordering.mdown  cpp.css  cpp_footer.html  cpp_header.html  doxyfile  gosu.rb  rdoc-style.css
src/: ALChannelManagement.hpp  AppleUtility.hpp  Audio.cpp  AudioFile.hpp  AudioFileAudioToolbox.cpp  AudioFileSDLSound.cpp  AudioImpl.cpp  AudioImpl.hpp  AudioToolboxFile.hpp  BinPacker.cpp  BinPacker.hpp  Bitmap.cpp  BitmapIO.cpp  BlockAllocator.cpp  BlockAllocator.hpp  Buffer.cpp  Channel.cpp  ChannelWrapper.cpp  ClipRectStack.cpp  ClipRectStack.hpp  Color.cpp  ColorWrapper.cpp  Constants.cpp  Directories.cpp  DirectoriesApple.cpp  DirectoriesApple.mm  DirectoriesTouch.mm  DirectoriesUIKit.cpp  DirectoriesUnix.cpp  DirectoriesWin.cpp  DrawOp.hpp  DrawOpQueue.hpp  Drawable.cpp  EmptyDrawable.hpp  EmptyImageData.hpp  FPS.cpp  FileAndroid.cpp  FileUnix.cpp  FileWin.cpp  Font.cpp  (+100 more)
test/: .clang-format  .clang-tidy  BitmapTests.cpp  BufferTests.cpp  CMakeLists.txt  ClipRectStackTests.cpp  ColorTests.cpp  DirectoriesTests.cpp  DrawableTests.cpp  FFITests.cpp  FontTests.cpp  ImageTests.cpp  MacroTests.cpp  MathTests.cpp  TestHelper.hpp  TextTests.cpp  TextureTests.cpp  TiledDrawableTests.cpp  TiledImageDataTests.cpp  TimingTests.cpp  TransformTests.cpp  UtilityTests.cpp  WindowTests.cpp  test_audio.rb  test_color.rb  test_constants.rb  test_deprecations.rb  test_font.rb  test_gosu_module.rb  test_helper.rb  test_image.rb  test_image_io.rb  test_interface.rb  test_macros.rb  test_rendering.rb  test_text.rb  test_window.rb  test_window_interactive.rb
test/test_image_io/: alpha-psd.psd
trunk/: AsyncTest.rb  COPYING.txt  FontTest.rb  IdToCharTest.rb  README.txt  Rakefile  TODO.txt  readme.html
trunk/linux/: Makefile.in  README  XINERAMA_PATCH  configure  configure.ac  extconf.rb  gosu.gemspec
website/: index.html.erb  potd.rb  (+4 more)
(+1209 files in other folders)
