CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Gosu)

SET(GOSU_VERSION_MAJOR "0")
SET(GOSU_VERSION_MINOR "9")
SET(GOSU_VERSION_PATCH "1")
SET(GOSU_VERSION "${GOSU_VERSION_MAJOR}.${GOSU_VERSION_MINOR}.${GOSU_VERSION_PATCH}")

include(${CMAKE_CURRENT_SOURCE_DIR}/src.cmake)

OPTION(CMAKE_VERBOSE_MAKEFILE "Display every compilation command" OFF)

INCLUDE(Packaging.cmake)

MESSAGE(STATUS "")
MESSAGE(STATUS "Summary")
MESSAGE(STATUS "-------")
MESSAGE(STATUS "Static libraries:      " ${BUILD_STATIC_LIBRARIES})
MESSAGE(STATUS "Dynamic libraries:     " ${BUILD_DYNAMIC_LIBRARIES})
MESSAGE(STATUS "Build Type:            " ${CMAKE_BUILD_TYPE})
MESSAGE(STATUS "Enable C++11 Features: " ${GOSU_CPP11_ENABLED})
MESSAGE(STATUS "Build examples:        " ${ENABLE_EXAMPLES})
MESSAGE(STATUS "")

